# rust-harfbuzz

harfbuzz/: Cargo.toml
harfbuzz-sys/: Cargo.toml  makefile.cargo  update.sh  wrapper.h
harfbuzz-sys/src/: bindings.rs  lib.rs
