[package]
name = "harfbuzz-sys"
version = "0.5.0"
edition = "2021"
authors = ["The Servo Project Developers"]
license = "MIT"

description = "Rust bindings to the HarfBuzz text shaping engine"
repository = "https://github.com/servo/rust-harfbuzz"
documentation = "https://docs.rs/harfbuzz-sys/"
keywords = ["opentype", "font", "text", "layout", "unicode"]
categories = ["external-ffi-bindings", "internationalization"]

exclude = [
    "harfbuzz/test/subset/data/fonts/*",
    "harfbuzz/test/fuzzing/fonts/*",
    "harfbuzz/test/shaping/data/text-rendering-tests/fonts/*",
    "harfbuzz/test/shaping/data/aots/fonts/*",
    "harfbuzz/test/shaping/data/in-house/fonts/*",
]

links = "harfbuzz"
